--- a/secciones/tortas.html
+++ b/secciones/tortas.html
@@ -19,50 +19,45 @@
 <div class="logo">
   <a href="../index.html"> <img src="../img/pasticceria2.png"></a>
 </div>
-<nav class="navbar navbar-light bg-light fixed-top">
+<h1 class="titulos backgroundBrown">Tortas</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">❤️¡ENVIO GRATIS EN COMPRAS DE $5000 O MÀS!❤️</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <a class="navbar-brand" href="tortas.html">PASTELERIA ARTESANAL👩‍🍳</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <p class="offcanvas-title" id="offcanvasNavbarLabel">Menú</p>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos</a>
-            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-              <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
-              <li><a class="dropdown-item" href="#">Tortas</a></li>
-              <li><a class="dropdown-item" href="video.html">Video</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="compras.html">Cómo comprar</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
-            </li>  
-        </ul>
-        <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Productos </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
+            <li><a class="dropdown-item" href="#">Tortas</a></li>
+            <li><a class="dropdown-item" href="video.html">Video</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="compras.html">Cómo comprar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="nosotros.html">Nosotros</a>
+        </li>
+        
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
-<h1 class="titulos backgroundBrown">Tortas</h1>
 <div class="espacios"></div>
 </div>   
 <div class="centerFoto">
